<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_input"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/point_input_key"/>

            <TextView
                android:id="@+id/tv_clear"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:textColor="@color/colorPrimary"
                android:text="@string/action_clear"/>
        </RelativeLayout>

        <EditText
            android:id="@android:id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            tools:text="Make"
            android:minHeight="100dp"
            android:background="@null"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_point_engine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="翻译引擎："/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_translate_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_point_engine"
                android:layout_centerVertical="true" />

            <Button
                android:id="@+id/bt_translate"
                android:layout_width="@dimen/activity_main_button_translate_width"
                android:layout_height="@dimen/activity_main_button_translate_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_action_search"
                android:textColor="@android:color/white"
                android:text="@string/action_translate"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <RelativeLayout
            android:id="@+id/rl_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="#999999"
                android:layout_height="wrap_content"
                android:text="翻译结果"/>

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@+id/iv_paste"
                app:srcCompat="@drawable/ic_favorite_border_black_24dp"/>

            <ImageView
                android:id="@+id/iv_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_content_copy_black_24dp"/>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/list_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>
